tests/ui/structs/struct-fields-typo.stderr
error[E0609]: no field `baa` on type `BuildData`
  --> $DIR/struct-fields-typo.rs:11:17
   |
LL |     let x = foo.baa;
   |                 ^^^ unknown field
   |
help: a field with a similar name exists
   |
LL -     let x = foo.baa;
LL +     let x = foo.bar;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
